--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <div class="project-item">
-                <a href="https://theendnattklubb.no" target="_blank" class="project-link">
+                <a href="https://anfiagency.com" target="_blank" class="project-link">
                     <img src="projectimages/2.png" alt="Project 2" />
                     <div class="project-text">ANFI AGENCY. Website for TikTok Agency. Shopify. CSS.</div>
                 </a>
