--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hanna Sharifi Portfolio</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/portfolio/index.css">
 </head>
 
 <body>
@@ -85,7 +85,7 @@
     </footer>
 
 
-    <script src="app.js"></script>
+    <script src="/portfolio/.js"></script>
 </body>
 
 </html>
