--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <section id="headertext">
-            <h1><b>HANNA SHARIFI;</b></h1>
+            <h1><b>HANNA SHARIFI HEHE;</b></h1>
             <h4>Data Science student.<br>Self-taught Web Developer.<br>Video Editor.</h4>
         </section>
     </header>
