--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <section id="headertext">
-            <h1><b>HANNA SHARIFI OKAY;</b></h1>
-            <h4>Data Science student.<br>Self-taught Web Developer.<br>Video Editor.</h4>
+            <h1><b>HANNA SHARIFI;</b></h1>
+            <h4>Data Science student.<br>Self-taught Web Developer.</h4>
         </section>
     </header>
 
@@ -48,6 +48,7 @@
             <li>Shopify —</li>
             <li>Webflow —</li>
             <li>Squarespace —</li>
+            <li>Wordpress —</li>
             <li>Canva —</li>
         </ul>
     </section>
