--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div id="projectsList" class="flex-container">
             <div class="project-item">
                 <a href="https://theendnattklubb.no" target="_blank" class="project-link">
-                    <img src="projectimages/1.png" alt="Project 1" />
+                    <img src="/portfolio/projectimages/1.png" alt="Project 1" />
 
                     <div class="project-text">THE END NATTKLUBB. Website for local Night Club. Squarespace. JS.</div>
                 </a>
@@ -67,7 +67,7 @@
             <div class="project-item">
                 <a href="https://theendnattklubb.no" target="_blank" class="project-link">
                     <img src="projectimages/2.png" alt="Project 2" />
-                    <div class="project-text">ANFI AGENCY. Website for TikTok Agency. Shopify. CSS.</div>
+                    <div class="/portfolio/project-text">ANFI AGENCY. Website for TikTok Agency. Shopify. CSS.</div>
                 </a>
             </div>
         </div>
