--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hanna Sharifi Portfolio</title>
+    <title>Hanna Sharifi</title>
 
     <link rel="stylesheet" href="/portfolio/index.css">
 </head>
@@ -12,8 +12,8 @@
 <body>
     <header>
         <section id="headertext">
-            <h1><b>HANNA SHARIFI HEHE;</b></h1>
-            <h4>Data Science student.<br>Self-taught Web Developer.<br>Video Editor.</h4>
+            <h1><b>HANNA SHARIFI;</b></h1>
+            <h4>Data Analyst.<br>Bachelor in Applied Data Science.<br>Self Taught Frontend Developer</h4>
         </section>
     </header>
 
@@ -21,56 +21,38 @@
         <ul>
             <li><a href="#about">+About</a></li>
             <li><a href="#skills">+Skills</a></li>
-            <li><a href="#projects">+Projects</a></li>
             <li><a href="#contact">+Contact</a></li>
         </ul>
     </nav>
 
     <section id="about">
         <h2>ABOUT</h2>
-        <h4>As a self-taught developer, I discovered my passion for technology and 
-            problem-solving at a young age. Since then, I've ventured into web development 
-            and data science, honing my skills in frontend languages, Python, SQLite, and Excel. 
-            I enjoy tackling challenges and creating user-friendly web experiences while extracting 
-            valuable insights from data.</h4>
+        <h4>As a self-taught developer, I discovered my passion for coding and 
+            problem-solving at the age of 13. Since then, I have ventured into 
+            web development and data science, honing my skills in frontend languages, 
+            Python, SQLite, and Power BI. I enjoy tackling challenges and extracting 
+            valuable insights from data. Additionally, I am deeply committed to 
+            sustainability and believe in using technology to drive positive 
+            change and contribute to a more sustainable future.
+</h4>
     </section>
 
     <section id="skills">
         <h2>SKILLS</h2>
         <ul id="skillsList">
+            <li>Python —</li>
+            <li>SQLite —</li>
+            <li>Power BI —</li>
+            <li>Excel —</li>
             <li>HTML —</li>
             <li>CSS —</li>
             <li>JavaScript —</li>
-            <li>Python —</li>
-            <li>SQLite —</li>
-            <li>Excel —</li>
             <li>CapCut —</li>
             <li>Shopify —</li>
             <li>Webflow —</li>
             <li>Squarespace —</li>
-            <li>Canva —</li>
         </ul>
-    </section>
-
-    <section id="projects">
-        <h2>PROJECTS</h2>
-        <div id="projectsList" class="flex-container">
-            <div class="project-item">
-                <a href="https://theendnattklubb.no" target="_blank" class="project-link">
-                    <img src="projectimages/1.png" alt="Project 1" />
-
-                    <div class="project-text">THE END NATTKLUBB. Website for local Night Club. Squarespace. JS.</div>
-                </a>
-            </div>
-
-            <div class="project-item">
-                <a href="https://theendnattklubb.no" target="_blank" class="project-link">
-                    <img src="projectimages/2.png" alt="Project 2" />
-                    <div class="project-text">ANFI AGENCY. Website for TikTok Agency. Shopify. CSS.</div>
-                </a>
-            </div>
-        </div>
-    </section>
+   
 
     <section id="contact">
         <h3><a href="mailto:hannaftrs@hotmail.com">EMAIL ↗</a></h3>
