--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,9 +55,9 @@
    
 
     <section id="contact">
-        <h3><a href="mailto:hannaftrs@hotmail.com">EMAIL ↗</a></h3>
+        <h3><a href="mailto:hanna.sharifi@hotmail.com">EMAIL ↗</a></h3>
         <h3><a href="https://github.com/hannasharifi">GITHUB ↗</a></h3>
-        <h3><a href="https://www.linkedin.com/hannars">LINKEDIN ↗</a></h3>
+        <h3><a href="www.linkedin.com/in/hannars">LINKEDIN ↗</a></h3>
     </section>
 
     <footer>
