--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
     <header>
         <section id="headertext">
             <h2><b>HANNA SHARIFI;</b></h2>
-            <h4>Data Analyst.<br>Bachelor in Applied Data Science.<br>Self Taught Frontend Developer</h4>
+            <h4>Data Analyst.<br>Bachelor in Applied Data Science.<br>Self Taught Frontend Developer.</h4>
         </section>
     </header>
 
@@ -63,7 +63,7 @@
     <footer>
         <button id="scrollUpButton" onclick="scrollToTop()">UP</button>
 
-        <p class="footertext">All rights reserved Hanna Sharifi 2023 &copy;</p>
+        <p class="footertext">All rights reserved Hanna Sharifi 2024 &copy;</p>
     </footer>
 
 
